# UNO-server

./: CMakeLists.txt  README.md
doc/: ApplicationLayerProtocol.md  Parameters.md  requirements.md  应用层协议.md
src/: main.cpp  socklib.h
src/Model/: CardDeck.cpp  CardDeck.h  Dealer.cpp  Dealer.h  GameConstants.h  GameTable.cpp  GameTable.h  Player.cpp  Player.h  Request.h  UNOCard.cpp  UNOCard.h  User.h
src/Service/: GameService.cpp  GameService.h  UserService.cpp  UserService.h
src/Util/: InfoSecurity.cpp  InfoSecurity.h  OnlineUtil.cpp  OnlineUtil.h  TimeUtil.cpp  TimeUtil.h  socklib.cpp  socklib.h
